# skin-bdm

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  bdm.core.toml  dashboard.sh  done.md  main.cc  paraview.toml  run.sh
batch/: README.md  analyze.py  batch.py  checkpoint.py  lib.py  sensitivity.py  stats.py  sweep.py
batch/configs/: collagen_vs_scar.toml  cytokine_rate.toml  diabetic_factors.toml  resolution_rate.toml  sensitivity_ra.toml  sensitivity_wound.toml
docs/: README.md  architecture.md  guide.md  parameter_provenance.csv  parameters.md  treatments.md  unit_conversion.csv
literature/: README.md  check_sources.py  cure_criteria.py  lib.py  validate_all.py  verify_notes.py
literature/data/: README.md
literature/validators/: compare.py  compare_fibroblast.py  compare_immune.py  compare_microenvironment.py  compare_ra.py  compare_tumor.py  compare_wound.py  ra_dashboard.py
materials/: bone_cortical.toml  brain_grey.toml  brain_white.toml  cartilage.toml  skin_dermis.toml  skin_epidermis.toml  skin_hypodermis.toml
modules/angiogenesis/: README.md  SOURCES.yaml  config.toml  params.h  source_hook.h  vegf_op.h  vegf_pde.h
modules/bioelectric/: README.md  SOURCES.yaml  config.toml  params.h  source_hook.h  voltage_pde.h
modules/biofilm/: README.md  SOURCES.yaml  biofilm_op.h  biofilm_pde.h  config.toml  params.h  post_hook.h
modules/blood/: README.md  SOURCES.yaml  config.toml  params.h  source_hook.h
presets/: diabetic_wound.toml  nothing.toml  wound.toml
profiles/: TEMPLATE.toml  aged.toml  aged_diabetic.toml  burn.toml  diabetic.toml  hypertrophic.toml  keloid.toml  normal.toml  pressure.toml  psoriasis.toml  rheumatoid.toml  scleroderma.toml  surgical.toml  tumor.toml  tumor_wound.toml  venous.toml
scenarios/: aged_diabetic.toml  biofilm_infection.toml  chronic_wound.toml  immune_tuning.toml  severity_spectrum.toml  treatment_timing.toml  wound_size.toml
scripts/: build_bdm_fork.sh  clinical_calibrate.py  dashboard.py  figures.py  install-file-association.sh  param_table.py  perf_ab.sh  skibidy-open.desktop  skibidy-open.sh  wiggum_compare.py  wiggum_delta.py  wiggum_replicate.py
src/: skibidy.cc  skibidy.h
src/core/: metrics.h  (+23 more)
studies/: README.md  adaptive-study.sh  diabetic-study.sh  run-scenarios.sh  run_experiments.py  skin-comparison-study.sh  tumor-study.sh
tests/: core_test.cc  diabetic_test.cc  fibroblast_test.cc  immune_test.cc  integration_test.cc  module_smoke_test.cc  pde_test.cc  test-suite.cc  test.sh  test_helpers.h  test_main.cc  tissue_test.cc  tumor_test.cc  wound_test.cc
treatments/: anti_inflammatory.toml  combination.toml  doxycycline.toml  growth_factor.toml  hbo.toml  moisture.toml  npwt.toml
(+692 files in other folders)
